# SFMLProjects

./: CMakeLists.txt  README.md
00-Starter/src/: main.cpp
01-Test/include/: Dot.h
01-Test/src/: Dot.cpp  main.cpp
02-Snake/include/: Egg.h  Game.h  Snake.h
02-Snake/src/: Egg.cpp  Game.cpp  Random.cpp  Snake.cpp  main.cpp
03-Link/include/: Game.h
03-Link/src/: Game.cpp  main.cpp
04-Paintings/include/: FirstPainting.h  Game.h  PaintingFactory.h  Random.h  SecondPainting.h
04-Paintings/src/: FirstPainting.cpp  Game.cpp  PaintingFactory.cpp  SecondPainting.cpp
05-Breaker/: readme.md
05-Breaker/include/: Animation.h  Assets.h  Ball.h  Bar.h  Brick.h  GameController.h  Player.h  ShapeAnimation.h  Spark.h  TextAnimation.h
05-Breaker/src/: Animation.cpp  Assets.cpp  Ball.cpp  Bar.cpp  Brick.cpp  GameController.cpp  Player.cpp  ShapeAnimation.cpp  Spark.cpp  TextAnimation.cpp  main.cpp
